--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
+mixinDebug=true
+
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.8
@@ -16,3 +18,4 @@ archives_base_name=fresh-loot-highlight
 
 # Dependencies
 fabric_version=0.133.4+1.21.8
+modmenu_version=15.0.0
