--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,11 @@ mixinDebug=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.17.2
+minecraft_version=1.21.6
+yarn_mappings=1.21.6+build.1
+#yarn_mappings=1.21.8+build.1
+loader_version=0.16.14
+#loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
@@ -17,5 +19,6 @@ maven_group=com.madu59
 archives_base_name=fresh-loot-highlight
 
 # Dependencies
-fabric_version=0.133.4+1.21.8
-modmenu_version=15.0.0
+fabric_version=0.128.2+1.21.6
+#fabric_version=0.133.4+1.21.8
+modmenu_version = 15.0.0
