--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@ loader_version=0.17.2
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.2
-maven_group=com.madu59
+mod_version=1.0.3
+maven_group=fr.madu59
 archives_base_name=fresh-loot-highlight
 
 # Dependencies
