Switched to official mappings and updated to 1.21.11

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,19 +6,15 @@ mixinDebug=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-#yarn_mappings=1.21.9+build.1
-loader_version=0.17.2
-#loader_version=0.16.14
+minecraft_version=1.21.11-pre2
+loader_version=0.17.3
 loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.6
+mod_version=1.0.7
 maven_group=fr.madu59
 archives_base_name=fresh-loot-highlight
 
 # Dependencies
-#fabric_version=0.134.0+1.21.9
-fabric_version=0.135.0+1.21.10
-modmenu_version = 15.0.0
+fabric_version=0.139.2+1.21.11
+modmenu_version = 16.0.0-rc.1
