--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,15 @@ mixinDebug=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.11-pre2
-loader_version=0.17.3
+minecraft_version=1.21.11
+loader_version=0.18.1
 loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.7
+mod_version=1.0.8
 maven_group=fr.madu59
 archives_base_name=fresh-loot-highlight
 
 # Dependencies
-fabric_version=0.139.2+1.21.11
+fabric_version=0.139.4+1.21.11
 modmenu_version = 16.0.0-rc.1
