--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,10 @@ loader_version=0.18.1
 loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.9
+mod_version=1.0.10
 maven_group=fr.madu59
 archives_base_name=fresh-loot-highlight
 
 # Dependencies
 fabric_version=0.139.4+1.21.11
-modmenu_version = 16.0.0-rc.1
+modmenu_version = 17.0.0-beta.2
